--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/cotsao/project-one-movies#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.6",
+    "node-fetch": "^2.6.1",
     "rowdy-logger": "^1.0.2"
   }
 }
